--- a/pages/about.html
+++ b/pages/about.html
@@ -39,7 +39,7 @@
                     </ul>
                 </li>
                 <li><a href="https://www.art.yale.edu/about/study-areas/graduate-study-areas">Programs</a></li>
-                <li><a href="pages/about.html">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">News</a></li>
                 <li><a href="#">Gallery</a></li>
             </ul>
