--- a/pages/give_now.html
+++ b/pages/give_now.html
@@ -20,7 +20,7 @@
         <header>
             <div class="wrapper">
                 <h1>Yale School of Art</h1>
-                <p class="giveNow"><a href="../pages/give_now.html"><span class="fas fa-gift"></span> Give Now</a></p>
+                <p class="giveNow"><a href="give_now.html"><span class="fas fa-gift"></span> Give Now</a></p>
                 <p><a href="../index.html"><img src="../images/yale_logo.png" alt="Yale Logo"></a></p>    
             </div>
         </header>
@@ -40,7 +40,7 @@
                     </ul>
                 </li>
                 <li><a href="https://www.art.yale.edu/about/study-areas/graduate-study-areas">Programs</a></li>
-                <li><a href="pages/about.html">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">News</a></li>
                 <li><a href="#">Gallery</a></li>
             </ul>
