--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                     </ul>
                 </li>
                 <li><a href="https://www.art.yale.edu/about/study-areas/graduate-study-areas">Programs</a></li>
-                <li><a href="pages/about.html">About</a></li>
+                <li><a href="pages/about.html">About</a>
+                </li>
                 <li><a href="https://www.art.yale.edu/news">News</a></li>
                 <li><a href="https://www.art.yale.edu/exhibitions">Gallery</a></li>
             </ul>
